feat: implement BVN encryption with AES-256-GCM
- Add BVNEncryptionService for encrypting/decrypting BVN values
- Update virtual-accounts service to encrypt BVN before storage
- Update users service to encrypt BVN during verification
- Update webhook service to encrypt BVN from Paystack
- Add migration script to encrypt existing BVN values
- Add BVN masking in logs (shows only last 4 digits)
- Add setup documentation and migration guide

Security: All BVN values are now encrypted at rest using AES-256-GCM

--- a/apps/mularpay-api/package.json
+++ b/apps/mularpay-api/package.json
@@ -21,7 +21,8 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
-    "prisma:seed": "ts-node prisma/seed.ts"
+    "prisma:seed": "ts-node prisma/seed.ts",
+    "migrate:encrypt-bvns": "ts-node scripts/encrypt-existing-bvns.ts"
   },
   "dependencies": {
     "@nestjs/cache-manager": "^3.0.1",
