--- a/apps/mularpay-api/package.json
+++ b/apps/mularpay-api/package.json
@@ -32,7 +32,9 @@
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.8",
+    "@nestjs/platform-socket.io": "^11.1.9",
     "@nestjs/schedule": "^6.0.1",
+    "@nestjs/websockets": "^11.1.9",
     "@prisma/client": "^6.19.0",
     "@types/multer": "^2.0.0",
     "@upstash/redis": "^1.35.6",
@@ -50,7 +52,8 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "resend": "^6.4.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
