--- a/apps/mularpay-api/package.json
+++ b/apps/mularpay-api/package.json
@@ -38,6 +38,7 @@
     "@prisma/client": "^6.19.0",
     "@types/multer": "^2.0.0",
     "@upstash/redis": "^1.35.6",
+    "@venly/web3-provider": "^3.6.2",
     "argon2": "^0.44.0",
     "axios": "^1.13.2",
     "cache-manager": "^7.2.4",
