--- a/apps/mularpay-api/package.json
+++ b/apps/mularpay-api/package.json
@@ -57,7 +57,8 @@
     "reflect-metadata": "^0.2.2",
     "resend": "^6.4.2",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "svix": "^1.81.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
