feat: add comprehensive CI/CD pipeline with GitHub Actions
- Add GitHub Actions workflow for CI/CD
- Write tests for raverpay-api
- Add typecheck support across all apps
- Configure Railway deployment
- Set up email notifications
- Fix code formatting issues
- Add comprehensive documentation

--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "build:web": "turbo run build --filter=@raverpay/raverpay-web",
     "build:admin": "turbo run build --filter=@raverpay/raverpay-admin",
     "lint": "turbo run lint",
+    "typecheck": "turbo run typecheck",
     "test": "turbo run test",
     "clean": "turbo run clean && rm -rf node_modules .turbo",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore",
     "prisma:generate": "pnpm --filter @raverpay/raverpay-api prisma:generate",
     "prisma:migrate": "pnpm --filter @raverpay/raverpay-api prisma:migrate",
     "prisma:studio": "pnpm --filter @raverpay/raverpay-api prisma:studio",
