--- a/apps/raverpay-api/package.json
+++ b/apps/raverpay-api/package.json
@@ -26,6 +26,7 @@
     "migrate:encrypt-bvns": "ts-node scripts/encrypt-existing-bvns.ts"
   },
   "dependencies": {
+    "@circle-fin/developer-controlled-wallets": "^9.6.0",
     "@nest-lab/throttler-storage-redis": "^1.1.0",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
@@ -55,6 +56,7 @@
     "ioredis": "^5.8.2",
     "maxmind": "^5.0.1",
     "multer": "^2.0.2",
+    "node-forge": "^1.3.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
@@ -72,6 +74,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
+    "@types/node-forge": "^1.3.14",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "dotenv": "^17.2.3",
