--- a/apps/raverpay-api/package.json
+++ b/apps/raverpay-api/package.json
@@ -27,7 +27,9 @@
   },
   "dependencies": {
     "@circle-fin/developer-controlled-wallets": "^9.6.0",
+    "@logtail/node": "^0.5.6",
     "@nest-lab/throttler-storage-redis": "^1.1.0",
+    "@nestjs/bullmq": "^11.0.4",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -40,12 +42,15 @@
     "@nestjs/throttler": "^6.5.0",
     "@nestjs/websockets": "^11.1.9",
     "@prisma/client": "^6.19.0",
+    "@sentry/node": "^10.32.1",
+    "@sentry/profiling-node": "^10.32.1",
     "@types/maxmind": "^2.0.5",
     "@types/multer": "^2.0.0",
     "@upstash/redis": "^1.35.6",
     "@venly/web3-provider": "^3.6.2",
     "argon2": "^0.44.0",
     "axios": "^1.13.2",
+    "bullmq": "^5.66.2",
     "cache-manager": "^7.2.4",
     "cache-manager-ioredis-yet": "^2.1.2",
     "class-transformer": "^0.5.1",
@@ -59,6 +64,7 @@
     "node-forge": "^1.3.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "posthog-node": "^5.17.4",
     "reflect-metadata": "^0.2.2",
     "resend": "^6.6.0",
     "rxjs": "^7.8.1",
