--- a/apps/raverpay-api/package.json
+++ b/apps/raverpay-api/package.json
@@ -42,6 +42,7 @@
     "@nestjs/throttler": "^6.5.0",
     "@nestjs/websockets": "^11.1.9",
     "@prisma/client": "^6.19.0",
+    "@sentry/nestjs": "^10.32.1",
     "@sentry/node": "^10.32.1",
     "@sentry/profiling-node": "^10.32.1",
     "@types/maxmind": "^2.0.5",
