--- a/apps/raverpay-web/package.json
+++ b/apps/raverpay-web/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@circle-fin/w3s-pw-web-sdk": "workspace:^",
     "next": "16.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0"
