--- a/apps/raverpay-admin/package.json
+++ b/apps/raverpay-admin/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@circle-fin/modular-wallets-core": "^1.0.13",
     "@circle-fin/w3s-pw-web-sdk": "^1.1.11",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -40,6 +41,7 @@
     "recharts": "^3.4.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "viem": "2.21.27",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
