--- a/apps/raverpay-api/package.json
+++ b/apps/raverpay-api/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@circle-fin/developer-controlled-wallets": "^9.6.0",
+    "@circle-fin/modular-wallets-core": "^1.0.13",
     "@circle-fin/user-controlled-wallets": "^3.0.0",
     "@logtail/node": "^0.5.6",
     "@nest-lab/throttler-storage-redis": "^1.1.0",
