add build fixes

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "build:api": "turbo run build --filter=@raverpay/raverpay-api",
     "build:web": "turbo run build --filter=@raverpay/raverpay-web",
     "build:admin": "turbo run build --filter=@raverpay/raverpay-admin",
-    "lint": "turbo run lint",
-    "typecheck": "turbo run typecheck",
-    "test": "turbo run test",
+    "lint": "turbo run lint --filter=!@raverpay/raverpay-mobile --filter=!@raverpay/raverpay-web",
+    "typecheck": "turbo run typecheck --filter=!@raverpay/raverpay-mobile --filter=!@raverpay/raverpay-web",
+    "test": "turbo run test --filter=!@raverpay/raverpay-mobile --filter=!@raverpay/raverpay-web",
     "clean": "turbo run clean && rm -rf node_modules .turbo",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore",
